<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PureDialog.Linear"
    android:paddingHorizontal="@dimen/App_Padding_M"
    android:paddingTop="@dimen/App_Padding_M"
    tools:context=".dialog.OrderDialog">

    <TextView
        style="@style/PureDialog.Text"
        android:layout_marginBottom="@dimen/App_Margin_S"
        android:text="@string/Order_Criteria_Title" />

    <TextView
        android:id="@+id/txtCriteriaOD"
        style="@style/PureButton.Text.Selectable.Full"
        android:layout_marginBottom="@dimen/App_Margin_S"
        android:text="@string/Order_Criteria_Addition_Date" />

    <Spinner
        android:id="@+id/spnCriteriaOD"
        style="@style/PureSpinner.Dialog"
        android:layout_marginBottom="@dimen/App_Margin_S"
        android:prompt="@string/Order_Criteria_Title" />

    <TextView
        style="@style/PureDialog.Text"
        android:layout_marginBottom="@dimen/App_Margin_S"
        android:text="@string/Order_Style_Title" />

    <TextView
        android:id="@+id/txtStyleOD"
        style="@style/PureButton.Text.Selectable.Full"
        android:layout_marginBottom="@dimen/App_Margin_S"
        android:text="@string/Order_Style_New_To_Old" />

    <Spinner
        android:id="@+id/spnStyleOD"
        style="@style/PureSpinner.Dialog"
        android:layout_marginBottom="@dimen/App_Margin_S"
        android:prompt="@string/Order_Style_Title" />

    <LinearLayout
        style="@style/PureButton.Linear"
        android:layout_marginTop="@dimen/App_Margin_M"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtCancelOD"
            style="@style/PureButton.Text.Selectable.Full"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/App_Margin_M"
            android:layout_weight="1"
            android:text="@string/Button_Cancel" />

        <TextView
            android:id="@+id/txtApplyOD"
            style="@style/PureButton.Text.Selectable.Full"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/Button_Apply" />

    </LinearLayout>

</LinearLayout>