<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PureRoot.Relative"
    tools:context=".fragment.PrefFragment">

    <LinearLayout
        style="@style/PureBox.Linear"
        android:layout_marginHorizontal="@dimen/App_Margin_XL"
        android:layout_marginTop="@dimen/App_Margin_XL">

        <TextView
            style="@style/PureButton.Text.Title"
            android:layout_marginBottom="@dimen/App_Margin_L"
            android:text="@string/Pref_Theme" />

        <RadioGroup
            android:id="@+id/rdgThemePF"
            style="@style/PureButton.Radio.Group">

            <RadioButton
                android:id="@+id/rdbDefaultThemePF"
                style="@style/PureButton.Radio.Button"
                android:text="@string/Pref_Theme_Default" />

            <RadioButton
                android:id="@+id/rdbLightThemePF"
                style="@style/PureButton.Radio.Button"
                android:text="@string/Pref_Theme_Light" />

            <RadioButton
                android:id="@+id/rdbDarkThemePF"
                style="@style/PureButton.Radio.Button"
                android:text="@string/Pref_Theme_Dark" />
        </RadioGroup>

    </LinearLayout>

</RelativeLayout>